@@ -2,9 +2,8 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "Šik, J., Hora, J., Humlı́ček, J., Optical functions of silicon at high temperatures, <a href="https://doi.org/10.1063/1.368951"><i>Journal of Applied Physics</i> <b>84</b>, 6291–6298 (1998)</a>"
-COMMENTS: "Temperature: 298 K (25 C): Doping: boron < 5×10<sup>14</sup> cm<sup>-3</sup>. Energy was converted into wavelengths with lambda = 1.23984190/
-E (eV)"
+REFERENCES: "J. Šik, J. Hora, J. Humlı́ček. Optical functions of silicon at high temperatures, <a href=\"https://doi.org/10.1063/1.368951\"><i>J. Appl. Phys.</i> <b>84</b>, 6291–6298 (1998)</a>"
+COMMENTS: "Temperature: 25 °C (298 K)."
 DATA:
   - type: tabulated nk
     data: |
